--- a/package.json
+++ b/package.json
@@ -7,10 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "seed": "npx tsx database/seed.ts",
     "db:generate": "npx drizzle-kit generate",
     "db:migrate": "npx drizzle-kit migrate",
-    "db:studio": "npx drizzle-kit studio"
+    "db:studio": "drizzle-kit studio --config=drizzle.config.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -26,8 +25,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
-    "dotenv": "^16.4.7",
-    "drizzle-orm": "^0.38.2",
+    "dotenv": "^16.6.1",
+    "drizzle-orm": "^0.38.4",
     "eslint-plugin-tailwindcss": "^3.17.5",
     "imagekit": "^6.0.0",
     "imagekitio-next": "^1.0.1",
@@ -53,7 +52,7 @@
     "@typescript-eslint/eslint-plugin": "^8.46.2",
     "@typescript-eslint/parser": "^8.46.2",
     "autoprefixer": "^10.4.21",
-    "drizzle-kit": "^0.30.1",
+    "drizzle-kit": "^0.30.6",
     "eslint": "^9.38.0",
     "eslint-config-next": "15.1.2",
     "eslint-config-prettier": "^10.1.8",
